--- a/v1/production/bootstrap-3.3.5/_config.yml
+++ b/v1/production/bootstrap-3.3.5/_config.yml
@@ -27,6 +27,6 @@ blog:             http://blog.getbootstrap.com
 expo:             http://expo.getbootstrap.com
 
 cdn:
-  css:            https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css
-  css_theme:      https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css
+  css:            https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/html/bootstrap.min.html
+  css_theme:      https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/html/bootstrap-theme.min.html
   js:             https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js
